themes/beaver/assets/css/navigation.css
.btn,
.btn:hover {
  padding: 10px 18px;
  font-size: 16px;
  line-height: 24px;
  font-weight: 700;
  border-radius: 25px;
  text-decoration: none;
  white-space: nowrap;
  display: inline-block;
  vertical-align: top;
  min-width: 100px;
  text-align: center;
}

.btn-primary {
  background-color: #1a8cff;
  color: #fff !important;
}

.btn-primary:hover {
  background-color: #007af4;
}

.top-panel {
  padding: 15px 20px 0;
  position: absolute;
  width: 100%;
  z-index: 100;

  @media (max-width: 1024px) {
    padding: 20px;
  }
}

.top-panel .wrapper {
  max-width: 1280px;
  width: auto;
  padding: 0;
  margin: 0 auto;
}

.top-panel .content {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.top-panel .logo {
  width: 200px;
  height: auto;
  display: block;
}

.navigation {
  @media (max-width: 1024px) {
    position: fixed;
    background-color: #fff;
    top: 0;
    bottom: 0;
    width: 320px;
    right: -320px;
    z-index: 10;
    transition: .3s;
  }
}

.menu-opener {
  display: none;
  width: 30px;
  height: 19px;
  border: solid #121212;
  border-width: 3px 0;
  position: relative;
  cursor: pointer;

  @media (max-width: 1024px) {
    display: block;
  }
}

.menu-opener:before {
  content: '';
  position: absolute;
  width: 100%;
  height: 3px;
  background-color: #121212;
  left: 0;
  top: 50%;
  margin-top: -1px;
}

.menu-close {
  display: none;
  width: 25px;
  height: 25px;
  position: absolute;
  top: 24px;
  left: 16px;
  cursor: pointer;
}

.menu-close:before {
  content: '';
  position: absolute;
  height: 2px;
  background-color: #121212;
  left: 4px;
  right: 4px;
  top: 50%;
  margin-top: -1px;
  transform: rotate(45deg);
}

.menu-close:after {
  content: '';
  position: absolute;
  height: 2px;
  background-color: #121212;
  left: 4px;
  right: 4px;
  top: 50%;
  margin-top: -1px;
  transform: rotate(-45deg);
}

.navigation.-open .menu-close {
  @media (max-width: 1024px) {
    display: block;
  }
}

.navigation .list {
  display: flex;
  flex-direction: row;
  align-items: center;
  list-style: none;
  margin: 0;
  padding: 0;
}

.navigation.-open + .menu-opener {
  @media (max-width: 1024px) {
    display: none;
  }
}

.navigation .item {
  padding: 15px 0;
  margin-right: 9px;
  position: relative;
}

.navigation .item:last-child {
  margin-right: 0;
}

.navigation .item .arrow {
  content: '';
  position: absolute;
  top: 50%;
  right: 0;
  margin-top: -6px;
  width: 9px;
  height: 9px;
  border-color: #121212;
  border-style: solid;
  border-width: 0 2px 2px 0;
  transform-origin: 70% 70%;
  transform: rotate(45deg);
  transition: .3s;
}

.navigation .link {
  padding: 15px;
  display: inline-block;
  vertical-align: top;
  font-size: 16px;
  font-weight: 300;
  line-height: 24px;
  color: #121212;
  text-decoration: none;
  transition: .3s;
}

  .navigation .-active .link {
  color: #1a8cff;
}

.navigation .item.-active .arrow {
  border-color: #1a8cff;
}

.navigation .sub-menu {
  display: none;
  background-color: #fff;
  box-shadow: 0 10px 40px rgba(0,0,0,.1);
  border-radius: 20px;
  padding: 30px 30px 0;
  margin: 30px 0 0;
  position: absolute;
  top: 100%;
  margin-top: 0;
  left: 0;
  z-index: 10;
  text-align: left;
  width: 888px;
  transform: translateX(-40%);
  font-size: 0;
  line-height: 0;

  @media (max-width: 1080px) {
    width: 720px;
  }
}

.navigation .sub-menu:before {
  position: absolute;
  content: '';
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 15px 0 15px 15px;
  border-color: transparent transparent transparent #fff;
  right: unset!important;
  top: -20px !important;
  left: 45% !important;
  transform: rotate(270deg) !important;
}

.navigation .sub-item {
  display: inline-block;
  vertical-align: middle;
  width: 50%;
  font-size: 14px;
  line-height: 20px;
  font-weight: 300;
  margin-bottom: 30px;
}

.navigation .sub-link {
  display: block;
  text-decoration: none;
}

.navigation .sub-image {
  float: left;
  background-repeat: no-repeat;
  background-size: contain;
  width: 27px;
  height: auto;
}

.navigation .sub-image .a {
  stroke-width: 1.5;
}

.navigation .sub-holder {
  overflow: hidden;
  padding-left: 20px;
  padding-right: 45px;
  padding: 0 20px;
}

.navigation .sub-name {
  font-weight: 700;
  font-size: 20px;
  line-height: 26px;
  color: #121212;
  transition: .3s;
}

.navigation .sub-item:hover .sub-name {
  color: #1a8cff;
}

.navigation .sub-text {
  font-size: 14px;
  line-height: 20px;
  font-weight: 300;
  margin-bottom: 0;
  margin-top: 5px;
  color: #7e7e7e;
}

@media (min-width: 1025px) {
  .navigation .item:hover .sub-menu {
    display: block;
  }

  .navigation .item:hover .link {
    color: #1a8cff;
  }

  .navigation .item:hover .arrow {
    transform: rotate(225deg);
    border-color: #1a8cff;
  }
}

@media (max-width: 1024px) {
  .navigation.-open {
    right: 0;
    overflow-y: auto;
  }

  .navigation:before {
    position: fixed;
    content: '';
    left: 0;
    right: 320px;
    top: 0;
    bottom: 0;
    background-color: rgba(0,0,0,.8);
    z-index: -1;
    opacity: 0;
    transition: .3s;
  }

  .navigation.-open:before {
    opacity: 1;
  }

  .navigation.-open .list {
    display: block;
    padding: 70px 20px 20px;
  }

  body.-open {
    overflow: hidden;
  }

  .navigation .btn {
    display: block;
    text-align: center;
    font-weight: 300;
    line-height: 22px;
    font-size: 16px;
    background-color: #121212;
    color: #fff;
    border-radius: 6px;
    margin-top: 10px;
  }

  .navigation .item {
    padding: 0;
    margin: 0;
  }

  .navigation .link {
    padding: 14px 0;
  }

  .navigation .sub-holder {
    padding-right: 0;
  }

  .navigation .sub-menu {
    width: auto;
    position: static;
    padding: 0;
    margin: 0 -15px;
    transform: none;
    box-shadow: none;
    transition: .3s;
    display: block;
    max-height: 0;
    overflow: hidden;
  }

  .navigation .item.-open .sub-menu {
    max-height: 350px;
  }

  .navigation .sub-menu:before,
  .navigation .sub-menu:after {
    display: none;
  }

  .navigation .sub-item {
    width: auto;
    display: block;
    margin-bottom: 15px;
    padding: 0 15px;
  }

  .navigation .sub-link {
    display: flex;
    align-items: center;
  }

  .navigation .sub-image {
    float: none;
  }

  .navigation .sub-name {
    font-size: 16px;
    line-height: 24px;
  }

  .navigation .sub-text {
    display: none;
  }

  .navigation .item .arrow {
    top: 25px;
  }

  .navigation .item.-open .arrow {
    transform: rotate(225deg);
  }

  .navigation .item:hover .arrow {
    border-color: inherit;
  }
  .navigation .item:hover .link,
  .navigation .sub-item:hover .sub-name {
    color: inherit;
  }
}

